V1__init_schema.sql + maj de l'enregistrement des utilisateurs + correction erreur critique