@@ -1,26 +1,24 @@
 package com.example.springhotel.component;
 
-import com.example.springhotel.entity.Users;
-import org.springframework.boot.context.event.ApplicationReadyEvent;
-import org.springframework.stereotype.Component;
-
 import com.example.springhotel.entity.Privilege;
 import com.example.springhotel.entity.Role;
+import com.example.springhotel.entity.Users;
 import com.example.springhotel.repository.PrivilegeRepository;
 import com.example.springhotel.repository.RoleRepository;
 import com.example.springhotel.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationListener;
-import org.springframework.context.event.ContextRefreshedEvent;
-import org.springframework.security.crypto.password.PasswordEncoder;
-
 import jakarta.transaction.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.context.event.ApplicationReadyEvent;
+import org.springframework.context.ApplicationListener;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Component;
+
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
 @Component
-public class  SetupDataLoader implements ApplicationListener<ApplicationReadyEvent> {
+public class SetupDataLoader implements ApplicationListener<ApplicationReadyEvent> {
 
     boolean alreadySetup = false;
 
@@ -40,18 +38,21 @@ public class  SetupDataLoader implements ApplicationListener<ApplicationReadyEve
     @Transactional
     public void onApplicationEvent(ApplicationReadyEvent event) {
 
-        if (alreadySetup)
-            return;
-        Privilege readPrivilege
-                = createPrivilegeIfNotFound("READ_PRIVILEGE");
-        Privilege writePrivilege
-                = createPrivilegeIfNotFound("WRITE_PRIVILEGE");
+        if (alreadySetup) return;
 
-        List<Privilege> adminPrivileges = Arrays.asList(
-                readPrivilege, writePrivilege);
+        // Privilèges
+        Privilege readPrivilege = createPrivilegeIfNotFound("READ_PRIVILEGE");
+        Privilege writePrivilege = createPrivilegeIfNotFound("WRITE_PRIVILEGE");
+
+        // Rôles — USER, ADMIN, EMPLOYE
+        List<Privilege> adminPrivileges = Arrays.asList(readPrivilege, writePrivilege);
+        List<Privilege> employePrivileges = Arrays.asList(readPrivilege, writePrivilege);
+
         createRoleIfNotFound("ROLE_ADMIN", adminPrivileges);
-        createRoleIfNotFound("ROLE_USER", Arrays.asList(readPrivilege));
+        createRoleIfNotFound("ROLE_EMPLOYE", employePrivileges);
+        createRoleIfNotFound("ROLE_USER", List.of(readPrivilege));
 
+        // Admin par défaut (à remplacer en prod)
         if (userRepository.findByEmail("test@test.com").isEmpty()) {
             Role adminRole = roleRepository.findByName("ROLE_ADMIN");
             Users users = new Users();
@@ -69,7 +70,6 @@ public class  SetupDataLoader implements ApplicationListener<ApplicationReadyEve
 
     @Transactional
     Privilege createPrivilegeIfNotFound(String name) {
-
         Privilege privilege = privilegeRepository.findByName(name);
         if (privilege == null) {
             privilege = new Privilege(name);
@@ -79,9 +79,7 @@ public class  SetupDataLoader implements ApplicationListener<ApplicationReadyEve
     }
 
     @Transactional
-    Role createRoleIfNotFound(
-            String name, Collection<Privilege> privileges) {
-
+    Role createRoleIfNotFound(String name, Collection<Privilege> privileges) {
         Role role = roleRepository.findByName(name);
         if (role == null) {
             role = new Role(name);
